Fix dark-mode contrast for search results

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@
     --grayF: #000;
     --link-visited: #b5e3b7;
     --link-decoration: #7fefb2;
+    --pagefind-ui-text: #7e7e7e !important;
     --retweet: #64b88a;
     --retweet-tag: #25ed7f;
     --shadow-transparent: rgb(0 0 0 / 40%);
